--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -102,9 +102,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: django in c:\\programdata\\anaconda3\\lib\\site-packages (2.1.1)\n",
+      "Requirement already satisfied: pytz in c:\\programdata\\anaconda3\\lib\\site-packages (from django) (2018.5)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using pip version 10.0.1, however version 19.1.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install django"
    ]
@@ -177,9 +194,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Type 'django-admin help <subcommand>' for help on a specific subcommand.\n",
+      "\n",
+      "Available subcommands:\n",
+      "\n",
+      "[django]\n",
+      "    check\n",
+      "    compilemessages\n",
+      "    createcachetable\n",
+      "    dbshell\n",
+      "    diffsettings\n",
+      "    dumpdata\n",
+      "    flush\n",
+      "    inspectdb\n",
+      "    loaddata\n",
+      "    makemessages\n",
+      "    makemigrations\n",
+      "    migrate\n",
+      "    runserver\n",
+      "    sendtestemail\n",
+      "    shell\n",
+      "    showmigrations\n",
+      "    sqlflush\n",
+      "    sqlmigrate\n",
+      "    sqlsequencereset\n",
+      "    squashmigrations\n",
+      "    startapp\n",
+      "    startproject\n",
+      "    test\n",
+      "    testserver\n",
+      "Note that only Django core commands are listed as settings are not properly configured (error: Requested setting INSTALLED_APPS, but settings are not configured. You must either define the environment variable DJANGO_SETTINGS_MODULE or call settings.configure() before accessing settings.).\n"
+     ]
+    }
+   ],
    "source": [
     "!django-admin help"
    ]
@@ -220,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -247,11 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -269,11 +332,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder PATH listing for volume Windows\n",
+      "Volume serial number is CE4F-5D63\n",
+      "C:.\n",
+      "ÀÄÄÄtutorial\n"
+     ]
+    }
+   ],
    "source": [
     "!tree"
    ]
@@ -330,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,9 +427,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Type 'manage.py help <subcommand>' for help on a specific subcommand.\n",
+      "\n",
+      "Available subcommands:\n",
+      "\n",
+      "[auth]\n",
+      "    changepassword\n",
+      "    createsuperuser\n",
+      "\n",
+      "[contenttypes]\n",
+      "    remove_stale_contenttypes\n",
+      "\n",
+      "[django]\n",
+      "    check\n",
+      "    compilemessages\n",
+      "    createcachetable\n",
+      "    dbshell\n",
+      "    diffsettings\n",
+      "    dumpdata\n",
+      "    flush\n",
+      "    inspectdb\n",
+      "    loaddata\n",
+      "    makemessages\n",
+      "    makemigrations\n",
+      "    migrate\n",
+      "    sendtestemail\n",
+      "    shell\n",
+      "    showmigrations\n",
+      "    sqlflush\n",
+      "    sqlmigrate\n",
+      "    sqlsequencereset\n",
+      "    squashmigrations\n",
+      "    startapp\n",
+      "    startproject\n",
+      "    test\n",
+      "    testserver\n",
+      "\n",
+      "[sessions]\n",
+      "    clearsessions\n",
+      "\n",
+      "[staticfiles]\n",
+      "    collectstatic\n",
+      "    findstatic\n",
+      "    runserver\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py help"
    ]
@@ -397,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -419,11 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder PATH listing for volume Windows\n",
+      "Volume serial number is CE4F-5D63\n",
+      "C:\\USERS\\JOSECH\\DROPBOX\\CODIGO\\PYTHONISTA\\CURSOS\\PY231\\TUTORIAL\\MAIN\n",
+      "ÀÄÄÄmigrations\n"
+     ]
+    }
+   ],
    "source": [
     "!tree main"
    ]
