--- a/10_clases_de_django_http_servidor.ipynb
+++ b/10_clases_de_django_http_servidor.ipynb
@@ -249,7 +249,8 @@
     "               path('claves/<str:nombre>', views.saluda),\n",
     "               path('json', views.respuesta_json),\n",
     "               path('contenido', views.contenido),\n",
-    "               path('error', views.error)]\n",
+    "               path('error', views.error),\n",
+    "               path('listas', views.listas)]\n",
     "```"
    ]
   },
@@ -291,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat tutorial/main/urls.py "
+    "%pycat tutorial/main/urls.py"
    ]
   },
   {
@@ -337,6 +338,10 @@
     "@csrf_exempt\n",
     "def contenido(request):\n",
     "    return JsonResponse(request.POST.dict())\n",
+    "\n",
+    "\n",
+    "def listas (request):\n",
+    "    return HttpResponse(request.GET.lists()\n",
     "```"
    ]
   },
@@ -380,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat tutorial/main/views.py "
+    "%pycat tutorial/main/views.py"
    ]
   },
   {
@@ -444,11 +449,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://localhost:5000/main/contenido\n",
-    "\n",
-    "http://localhost:5000/main/contenido?nombre=jose&apellido=perez\n",
-    "\n",
-    "\n",
     "http://localhost:5000/main/contenido?nombre=jose&apellido=perez&nombre=Jesus&nombre=Pablo"
    ]
   },
