--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "Django siempre estará ligado a una base de datos desde su instalación.\n",
     "\n",
-    "La confguración de las bases de datos a las que *Django* puede acceder se encuentran en la variable *DATABASES* del archivo *settings* del proyecto."
+    "La confguración de las bases de datos a las que *Django* puede acceder se encuentran en la variable ```DATABASES``` del archivo ```settings``` del proyecto."
    ]
   },
   {
@@ -79,9 +79,8 @@
    "source": [
     "### Configuración inicial del proyecto con *SQLite*.\n",
     "\n",
-    "El archivo ```tutorial/tutorial/settings.py``` contiene la configuración que se creó al momento de generar el proyecto, la cual define una conexión a una base de datos [*SQLite*](https://www.sqlite.org) cuyo archivo se encuentra localizado en ```tutorial/db.sqlite3````.\n",
+    "El archivo ```tutorial/tutorial/settings.py``` contiene la configuración que se creó al momento de generar el proyecto, la cual define una conexión a una base de datos [*SQLite*](https://www.sqlite.org) cuyo archivo se encuentra localizado en ```tutorial/db.sqlite3```.\n",
     "\n",
-    "**Nota:** La base de datos *SQLite* instalada es totalmente funcional para fines didácticos, por lo que no es obligatorio modificar la configuración inicial a menos que se desee utilizar otro gestor de bases de datos.\n",
     "\n",
     "La variable ```DATABASES``` define lo siguiente:\n",
     "\n",
@@ -92,7 +91,9 @@
     "        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
     "    }\n",
     "}\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Nota:** La base de datos *SQLite* instalada es totalmente funcional para fines didácticos, por lo que no es obligatorio modificar la configuración inicial a menos que se desee utilizar otro gestor de bases de datos."
    ]
   },
   {
@@ -108,9 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estructura de *DATABASES*.\n",
+    "### Estructura de ```DATABASES```.\n",
     "\n",
-    "El objeto database es de tipo *dict* y puede contener más de un acceso a base de datos conforme a la siguiente sintaxis.\n",
+    "El objeto con nombre ```DATABASES``` es de tipo ```dict``` y puede contener más de un acceso a base de datos conforme a la siguiente sintaxis.\n",
     "\n",
     "```\n",
     "DATABASE = {<dentificador 1>:{<argumentos de configuración>}, \n",
@@ -118,7 +119,9 @@
     "            ...\n",
     "            <dentificador n>:{<argumentos de configuración>},} \n",
     "```\n",
-    "La configuración de cada base de datos también corresponde a un objeto *dict*, ligado a un identificador. El identificador por defecto es ```default```. "
+    "La configuración de cada base de datos también corresponde a un objeto ```dict```ligado a un nombre específico. \n",
+    "\n",
+    "El identificador por defecto es ```default```. "
    ]
   },
   {
@@ -159,8 +162,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En vista de que el conector de Django no funciona correctamente con Python 3, se utilizará [*mysql.connector*](https://www.mysql.com/products/connector/) como *engine*.\n",
-    "\n",
+    "En vista de que el conector de Django no funciona correctamente con Python 3, se utilizará [*mysql.connector*](https://www.mysql.com/products/connector/) como *engine*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mysql-connector-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La máquina virtual publicada por Pythonista<sup>®</sup> cuenta con un servicio de *MariaDB* ejecutándose con las siguientes características:\n",
     "\n",
     "* Usuario: ```root```\n",
@@ -176,16 +193,18 @@
    "metadata": {},
    "source": [
     "``` python\n",
-    "DATABASES = {'default': {'ENGINE': 'mysql.connector.django',\n",
-    "                'NAME': 'db_django',\n",
-    "                'USER': 'root',\n",
-    "                'PASSWORD': '0p3n5t4ck',\n",
-    "                'HOST': 'localhost',\n",
-    "                'PORT': 3306},\n",
-    "}\n",
+    "\n",
+    "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
+    "                         'NAME': os.path.join(BASE_DIR, 'db.sqlite3')},\n",
+    "            'pythonista': {'ENGINE': 'mysql.connector.django',\n",
+    "                           'NAME': 'db_django',\n",
+    "                           'USER': 'root',\n",
+    "                           'PASSWORD': '0p3n5t4ck',\n",
+    "                           'HOST': 'localhost',\n",
+    "                           'PORT': 3306}}\n",
     "```\n",
     "\n",
-    "**Advertencia:** Esta configuración fue creada para el servicio de base de datos de la máquina virtual publicada por Pythonista<sup>®</sup>. En caso de usar otra base de datos con otras credenciales de usuario, es necesario editar directamemente el script ```tutorial/tutorial/settings.py```."
+    "**Advertencia:** Esta configuración fue creada para el gestor de base de datos de la máquina virtual publicada por Pythonista<sup>®</sup>. En caso de usar otra base de datos con otras credenciales de usuario, es necesario editar directamemente el script ```tutorial/tutorial/settings.py```."
    ]
   },
   {
@@ -214,128 +233,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\12\\settings.py tutorial\\tutorial\\settings.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "%pycat tutorial/tutorial/settings.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## La extensión ```ipython-sql```.\n",
-    "\n",
-    "La extensión de ```IPython``` llamada ```ipython-sql``` permite conectarse a un gestor de bases de datos y ejecutar consultas *SQL* desde una celda usando el comando mágico ```%%sql```.\n",
-    "\n",
-    "La referencia a esta extensión se encuentra en https://github.com/catherinedevlin/ipython-sql."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda instalará la extensión ```ipython-sql```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "! pip install ipython-sql"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda cargará la extensión a esta notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext sql"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*.\n",
-    "\n",
-    "**Nota:** En caso de que la contraseña del usuario *root* sea distinta de *0p3n5t4ck*, sustitúyala donde corresponda."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda creará la base de datos con nombre *db_django*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%%sql \n",
-    "create database db_django;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda mostrará todas las bases de datos de *MariaDB*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%sql show databases;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda mostrará el contenido de la base de datos *db_django*, la cual está vacía."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "use db_django;\n",
-    "show tables;"
    ]
   },
   {
@@ -378,7 +290,95 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py migrate --database=default"
+    "! python manage.py migrate --database=default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python manage.py migrate --database=pythonista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La extensión ```ipython-sql```.\n",
+    "\n",
+    "La extensión de ```IPython``` llamada ```ipython-sql``` permite conectarse a un gestor de bases de datos y ejecutar consultas *SQL* desde una celda usando el comando mágico ```%%sql```.\n",
+    "\n",
+    "La referencia a esta extensión se encuentra en https://github.com/catherinedevlin/ipython-sql."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda instalará la extensión ```ipython-sql```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install ipython-sql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda cargará la extensión a esta notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspección de una base de datos *MySQL* con ```ipython-sql```.\n",
+    "\n",
+    "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*.\n",
+    "\n",
+    "**Nota:** En caso de que la contraseña del usuario ```root``` sea distinta de ```0p3n5t4ck```,es necesario sustituirla donde corresponda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql show databases;"
    ]
   },
   {
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql mysql+mysqlconnector://root:***@localhost\n",
     "use db_django;\n",
     "show tables;"
    ]
@@ -403,36 +403,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se iniciará el servidor de *Django*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ADVERTENCIAS:** \n",
+    "### Inspección de una base de datos *SQLite* con ```ipython-sql```.\n",
     "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
-    "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+    "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
+    "%sql sqlite:///tutorial/db.sqlite3"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "* En las notebooks previas la ejecución del servidor indicaba ciertas advertencias sobre migraciones no ejecutadas. En este caso, dichas advertencias dejaron de presentarse."
+    "%%sql sqlite:///tutorial/db.sqlite3\n",
+    "SELECT name FROM sqlite_master WHERE type = \"table\""
    ]
   },
   {
