--- a/13_modelos.ipynb
+++ b/13_modelos.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,134 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class Model in module django.db.models.base:\n",
-      "\n",
-      "class Model(builtins.object)\n",
-      " |  Model(*args, **kwargs)\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __eq__(self, other)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __getstate__(self)\n",
-      " |      Hook to allow choosing the attributes to pickle.\n",
-      " |  \n",
-      " |  __hash__(self)\n",
-      " |      Return hash(self).\n",
-      " |  \n",
-      " |  __init__(self, *args, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __reduce__(self)\n",
-      " |      Helper for pickle.\n",
-      " |  \n",
-      " |  __repr__(self)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __setstate__(self, state)\n",
-      " |  \n",
-      " |  __str__(self)\n",
-      " |      Return str(self).\n",
-      " |  \n",
-      " |  clean(self)\n",
-      " |      Hook for doing any extra model-wide validation after clean() has been\n",
-      " |      called on every field by self.clean_fields. Any ValidationError raised\n",
-      " |      by this method will not be associated with a particular field; it will\n",
-      " |      have a special-case association with the field defined by NON_FIELD_ERRORS.\n",
-      " |  \n",
-      " |  clean_fields(self, exclude=None)\n",
-      " |      Clean all fields and raise a ValidationError containing a dict\n",
-      " |      of all validation errors if any occur.\n",
-      " |  \n",
-      " |  date_error_message(self, lookup_type, field_name, unique_for)\n",
-      " |  \n",
-      " |  delete(self, using=None, keep_parents=False)\n",
-      " |  \n",
-      " |  full_clean(self, exclude=None, validate_unique=True)\n",
-      " |      Call clean_fields(), clean(), and validate_unique() on the model.\n",
-      " |      Raise a ValidationError for any errors that occur.\n",
-      " |  \n",
-      " |  get_deferred_fields(self)\n",
-      " |      Return a set containing names of deferred fields for this instance.\n",
-      " |  \n",
-      " |  prepare_database_save(self, field)\n",
-      " |  \n",
-      " |  refresh_from_db(self, using=None, fields=None)\n",
-      " |      Reload field values from the database.\n",
-      " |      \n",
-      " |      By default, the reloading happens from the database this instance was\n",
-      " |      loaded from, or by the read router if this instance wasn't loaded from\n",
-      " |      any database. The using parameter will override the default.\n",
-      " |      \n",
-      " |      Fields can be used to specify which fields to reload. The fields\n",
-      " |      should be an iterable of field attnames. If fields is None, then\n",
-      " |      all non-deferred fields are reloaded.\n",
-      " |      \n",
-      " |      When accessing deferred fields of an instance, the deferred loading\n",
-      " |      of the field will call this method.\n",
-      " |  \n",
-      " |  save(self, force_insert=False, force_update=False, using=None, update_fields=None)\n",
-      " |      Save the current instance. Override this in a subclass if you want to\n",
-      " |      control the saving process.\n",
-      " |      \n",
-      " |      The 'force_insert' and 'force_update' parameters can be used to insist\n",
-      " |      that the \"save\" must be an SQL insert or update (or equivalent for\n",
-      " |      non-SQL backends), respectively. Normally, they should not be set.\n",
-      " |  \n",
-      " |  save_base(self, raw=False, force_insert=False, force_update=False, using=None, update_fields=None)\n",
-      " |      Handle the parts of saving which should be done only once per save,\n",
-      " |      yet need to be done in raw saves, too. This includes some sanity\n",
-      " |      checks and signal sending.\n",
-      " |      \n",
-      " |      The 'raw' argument is telling save_base not to save any parent\n",
-      " |      models and not to do any changes to the values before save. This\n",
-      " |      is used by fixture loading.\n",
-      " |  \n",
-      " |  serializable_value(self, field_name)\n",
-      " |      Return the value of the field name for this instance. If the field is\n",
-      " |      a foreign key, return the id value instead of the object. If there's\n",
-      " |      no Field object with this name on the model, return the model\n",
-      " |      attribute's value.\n",
-      " |      \n",
-      " |      Used to serialize a field's value (in the serializer, or form output,\n",
-      " |      for example). Normally, you would just access the attribute directly\n",
-      " |      and not use this method.\n",
-      " |  \n",
-      " |  unique_error_message(self, model_class, unique_check)\n",
-      " |  \n",
-      " |  validate_unique(self, exclude=None)\n",
-      " |      Check unique constraints on the model and raise ValidationError if any\n",
-      " |      failed.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Class methods defined here:\n",
-      " |  \n",
-      " |  check(**kwargs) from django.db.models.base.ModelBase\n",
-      " |  \n",
-      " |  from_db(db, field_names, values) from django.db.models.base.ModelBase\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  pk\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(Model)"
    ]
@@ -249,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,42 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'cp' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cp src/13/models.py tutorial/main/models.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 file(s) copied.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\13\\models.py tutorial\\main\\models.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,25 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['django.contrib.admin',\n",
-       " 'django.contrib.auth',\n",
-       " 'django.contrib.contenttypes',\n",
-       " 'django.contrib.sessions',\n",
-       " 'django.contrib.messages',\n",
-       " 'django.contrib.staticfiles']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.INSTALLED_APPS"
    ]
@@ -425,17 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 file(s) copied.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\13\\settings.py tutorial\\tutorial\\"
    ]
@@ -449,36 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%pycat tutorial/tutorial/settings.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['django.contrib.admin',\n",
-       " 'django.contrib.auth',\n",
-       " 'django.contrib.contenttypes',\n",
-       " 'django.contrib.sessions',\n",
-       " 'django.contrib.messages',\n",
-       " 'django.contrib.staticfiles']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "settings.INSTALLED_APPS"
    ]
   },
   {
@@ -505,56 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'.' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! ./manage.py makemigrations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Invalid switch - \"migrations\".\n"
-     ]
-    }
-   ],
-   "source": [
-    "%ls main/migrations/"
    ]
   },
   {
@@ -576,6 +351,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consulta de la base de datos *MySQL*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -590,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost//db_django"
    ]
   },
   {
@@ -602,6 +384,41 @@
     "%%sql\n",
     "use db_django;\n",
     "show tables;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consulta de la base de datos *SQLite*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql sqlite:///tutorial/db.sqlite3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql sqlite:///tutorial/db.sqlite3\n",
+    "SELECT * FROM main_alumno"
    ]
   },
   {
