--- a/16_servidor_api_rest.ipynb
+++ b/16_servidor_api_rest.ipynb
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -43,11 +51,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%cp` not found.\n"
+     ]
+    }
+   ],
    "source": [
-    "%cp ../src/16/urls.py api/urls.py"
+    "!cp ../src/16/urls.py api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 file(s) copied.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!copy ..\\src\\16\\urls.py api\\urls.py"
    ]
   },
   {
@@ -153,18 +186,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp ../src/16/endpoint_views.py api/endpoint_views.py"
+    "!cp ../src/16/endpoint_views.py api/endpoint_views.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 file(s) copied.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!copy ..\\src\\16\\endpoint_views.py api\\endpoint_views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "%cat api/endpoint_views.py"
+    "%pycat api/endpoint_views.py"
    ]
   },
   {
@@ -219,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
