--- a/17_cliente_api_rest.ipynb
+++ b/17_cliente_api_rest.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos ={'nombre':'Ramiro', 'primer_apellido':'Salas', 'segundo_apellido':'Mijangos',\n",
-    "        'carrera':'Derecho', 'semestre':1, 'promedio':10, 'al_corriente':True}"
+    "datos ={'nombre':'Ramiro', 'primer_apellido':'Salas',\n",
+    "        'carrera':'Derecho', 'semestre':1, 'promedio':8, 'al_corriente':True,}"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.post(\"http://localhost:5000/api/1225\", data=datos)"
+    "respuesta = requests.post(\"http://localhost:5000/api/1226\", data=datos)"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
