--- a/14_operaciones_basicas _con_modelos.ipynb
+++ b/14_operaciones_basicas _con_modelos.ipynb
@@ -153,7 +153,16 @@
    },
    "outputs": [],
    "source": [
-    "%cp ../src/14/alumnos.json alumnos.json"
+    "!cp ../src/14/alumnos.json alumnos.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\14\\alumnos.json alumnos.json"
    ]
   },
   {
@@ -178,7 +187,7 @@
    },
    "outputs": [],
    "source": [
-    "!./manage.py startapp api"
+    "!python manage.py startapp api"
    ]
   },
   {
@@ -222,7 +231,16 @@
    },
    "outputs": [],
    "source": [
-    "%cp ../src/14/settings.py tutorial/settings.py"
+    "!cp ../src/14/settings.py tutorial/settings.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\14\\settings.py tutorial\\settings.py"
    ]
   },
   {
@@ -233,18 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "import tutorial.settings as settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "settings.INSTALLED_APPS"
+    "%pycat tutorial/settings.py"
    ]
   },
   {
@@ -279,6 +286,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%copy ..\\src\\14\\tutorial_urls.py tutorial\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial\\urls.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,7 +326,25 @@
    },
    "outputs": [],
    "source": [
-    "%cp ../src/14/api_urls.py api/urls.py"
+    "!cp ../src/14/api_urls.py api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\14\\api_urls.py api\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat api\\urls.py"
    ]
   },
   {
@@ -335,7 +378,25 @@
    },
    "outputs": [],
    "source": [
-    "%cp ../src/14/models.py api/models.py"
+    "!cp ../src/14/models.py api/models.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\14\\models.py api\\models.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat api\\models.py"
    ]
   },
   {
@@ -386,7 +447,25 @@
    },
    "outputs": [],
    "source": [
-    "%cp ../src/14/views.py api/views.py"
+    "!cp ../src/14/views.py api/views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy ..\\src\\14\\views.py api\\views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat api/views.py"
    ]
   },
   {
@@ -404,7 +483,7 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py makemigrations"
+    "!python manage.py makemigrations"
    ]
   },
   {
@@ -415,7 +494,7 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py migrate"
+    "!python manage.py migrate"
    ]
   },
   {
@@ -480,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost/db_django"
    ]
   },
   {
@@ -497,7 +576,6 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "use db_django;\n",
     "show tables;"
    ]
   },
@@ -542,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
