--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuración de una base de datos *MySQL*/*MariaDB*."
+    "## Configuración de las bases de datos del proyecto."
    ]
   },
   {
@@ -156,6 +156,20 @@
    "metadata": {},
    "source": [
     "**Nota:** Las celdas de esta sección configurarán una conexión creada específicamente para la base de datos que se encuentra ejecutándose en la máquina virtual publicada por Pythonista®. En caso de usar un gestor de bases de datos distinto, no se deben de ejecutar las siguientes celdas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://docs.djangoproject.com/en/2.2/topics/db/multi-db/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparación del conector de MySQL."
    ]
   },
   {
@@ -187,6 +201,13 @@
     "\n",
     "El script ```src/12/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -256,12 +277,15 @@
    "source": [
     "## Sincronizando la bases de datos.\n",
     "\n",
-    "El subcomando *migrate* del gestos de *manage.py* permite dar de alta y sincronizar cada bases de datos a partir del indentificador definido en *settings.py*.\n",
+    "Al ejecutar ```manage.py```con el subcomando ```migrate``` se da de alta y sincronizar cada bases de datos indentificada con la clave correspondiente en el objeto ```DATABASES``` definido en ```settings.py```.\n",
     "\n",
     "``` bash\n",
-    "./manage.py migrate --database= <identificador>\n",
+    "./manage.py migrate --database=<clave>\n",
     "```\n",
-    "https://docs.djangoproject.com/en/2.1/topics/db/multi-db/"
+    "o\n",
+    "``` bash\n",
+    "python manage.py migrate --database= <clave>\n",
+    "```"
    ]
   },
   {
@@ -290,7 +314,7 @@
    },
    "outputs": [],
    "source": [
-    "! python manage.py migrate --database=default"
+    "!python manage.py migrate --database=default"
    ]
   },
   {
@@ -299,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python manage.py migrate --database=pythonista"
+    "!python manage.py migrate --database=pythonista"
    ]
   },
   {
@@ -385,24 +409,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda mostrará el contenido de la base de datos *db_django*, la cual ha sido poblada."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql mysql+mysqlconnector://root:***@localhost\n",
-    "use db_django;\n",
-    "show tables;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Inspección de una base de datos *SQLite* con ```ipython-sql```.\n",
     "\n",
     "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*."
@@ -452,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
