--- a/13_modelos.ipynb
+++ b/13_modelos.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "## La clase *django.db.models.Model*.\n",
     "\n",
-    "La clase *django.db.models.Model* es la superclase a partir de la cual se pueden diseñar los modelos de Django."
+    "La clase *django.db.models.Model* es la superclase a partir de la cual se pueden diseñar los modelos de *Django*."
    ]
   },
   {
@@ -75,7 +75,7 @@
     "\n",
     "Es posible consultar los tipos de datos definidos por *Django* desde la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/models/fields/#field-types"
+    "https://docs.djangoproject.com/en/2.2/ref/models/fields/#field-types"
    ]
   },
   {
@@ -88,7 +88,7 @@
     "\n",
     "Es posible consultar las opciones definidos por *Django* desde la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/models/fields/#field-options"
+    "https://docs.djangoproject.com/en/2.2/ref/models/fields/#field-options"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *tutorial/main/models.py* es el indicado para definir los modelos."
+    "* El archivo ```tutorial/main/models.py``` contiene algo similar a lo siguiente:"
    ]
   },
   {
@@ -137,17 +137,17 @@
    "source": [
     "## Definición de un modelo ilustrativo.\n",
     "\n",
-    "El archivo *src/13/models.py* contiene el siguiente código, el cual define a la clase *Alumno*, la cual es subclase de *django.db.models.Model*.\n",
+    "El archivo ```src/13/models.py``` contiene el siguiente código, el cual define a la clase ```Alumno```, la cual es subclase de ```django.db.models.Model```.\n",
     "\n",
-    "La clase *Alumno* cuenta con los atributos:\n",
+    "La clase ```Alumno``` cuenta con los atributos:\n",
     "\n",
-    "* *numero_de_cuenta*, el cual es un entero positivo que debe de ser único en la tabla.\n",
-    "* *nombre*, el cual es una cadena de 50 caracteres como máximo.\n",
-    "* *primer_apellido*, el cual es una cadena de 50 caracteres como máximo.\n",
-    "* *segundo_apellido*, el cual es una cadena de 50 caracteres como máximo.\n",
-    "* *carrera*, el cual es una cadena de 20 caracteres como máximo.\n",
-    "* *promedio*, el cual es un número de tipo flotante.\n",
-    "* *al_correinte*, el cual es un booleano."
+    "* ```numero_de_cuenta```, el cual es un entero positivo que debe de ser único en la tabla.\n",
+    "* ```nombre```, el cual es una cadena de 50 caracteres como máximo.\n",
+    "* ```primer_apellido```, el cual es una cadena de 50 caracteres como máximo.\n",
+    "* ```segundo_apellido```, el cual es una cadena de 50 caracteres como máximo.\n",
+    "* ```carrera```, el cual es una cadena de 20 caracteres como máximo.\n",
+    "* ```promedio```, el cual es un número de tipo flotante.\n",
+    "* ```al_corriente```, el cual es un booleano."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sutituirá al archivo *tutorial/main/models.py* con el archivo *src/13/models.py*."
+    "* La siguiente celda sutituirá al archivo ```tutorial/main/models.py``` con el archivo ```src/13/models.py```."
    ]
   },
   {
@@ -209,24 +209,6 @@
     "## Inclusión de modelos en la configuración.\n",
     "\n",
     "Para que un archivo *models.py* pueda ser incluido por *Django*, es necesario indicar su localización en la lista *INSTALLED_APPS* del archivo *settings.py* correspondiente como si se tratara de un módulo."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tutorial.tutorial import settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.INSTALLED_APPS"
    ]
   },
   {
@@ -446,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
